Phase 7: Frontend integrations - ngx-socket-io setup for WebSocket, Service Worker config for push, ApiService for backend connections

--- a/backend/package.json
+++ b/backend/package.json
@@ -79,5 +79,10 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "trustedDependencies": [
+    "@nestjs/core",
+    "browser-tabs-lock",
+    "unrs-resolver"
+  ]
 }
