--- a/frontend/ngsw-config.json
+++ b/frontend/ngsw-config.json
@@ -26,5 +26,15 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "api",
+      "urls": ["http://localhost:3000/**"],
+      "cacheConfig": {
+        "strategy": "freshness",
+        "timeout": "10s"
+      }
+    }
   ]
 }
