--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^20.3.0",
     "@angular/service-worker": "^20.3.0",
     "@auth0/auth0-angular": "^2.3.0",
+    "ngx-socket-io": "^4.9.3",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.2",
     "quill": "^2.0.3",
@@ -50,5 +51,10 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.9.2"
-  }
+  },
+  "trustedDependencies": [
+    "@parcel/watcher",
+    "browser-tabs-lock",
+    "core-js"
+  ]
 }
